style(profile.style): added responsiviness to profile view, fixed some bugs
added responsiviness to profile view, fixed some bugs, during my responsive tests, some bugs ocurred
(with vw), the page just broken, as if the width were graeter than the device, thus releasing the
horizontal scrollbar, i tried again and again to replicate the bug (after some changes in css code),
and it didn`t happen again, if you deal with this problem, send me a message detailing how you got
there

--- a/src/Styles/_scss/_header.scss
+++ b/src/Styles/_scss/_header.scss
@@ -3,12 +3,13 @@
   display: flex;
   background-color: #141414;
   justify-content: space-between;
+  margin-bottom: 32px;
   align-items: center;
   z-index: 9999;
   position: fixed;
   top: 0;
   width: 100vw;
-  height: $headerHeightDesktop;
+  height: 90px;
   $actualHeaderHeight: $headerHeightDesktop;
   .containerFixer {
     padding: 0 32px;
