--- a/src/Styles/_scss/_profile-page.scss
+++ b/src/Styles/_scss/_profile-page.scss
@@ -1,10 +1,9 @@
 .profilePageMain {
-  margin-top: $actualHeaderHeight + 32px;
+  margin-top: $headerHeightDesktop + 32px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
   .profileViewContainer {
     color: white;
     border-radius: 6px;
@@ -25,6 +24,12 @@
         height: 100px;
         object-fit: cover;
         border-radius: 100%;
+      }
+      img:hover {
+        filter: drop-shadow(0.6rem 0.6rem 0.75rem #131313);
+      }
+      p {
+        cursor: default;
       }
       #profileNickname {
         font-size: 22px;
